--- a/tasks/task2.html
+++ b/tasks/task2.html
@@ -1,7 +1,31 @@
-<h2>Welcome to My Custom Designed Page!</h2>
+<!DOCTYPE html>
+<html>
+<head>
+<title> Home Page!</title>
+</head>
+<body>
+    
+<div>
+    <center><h1  style="background-color: rgb(134, 132, 122);">Welcome to My Custom Designed Page !</h1></center>
 
-<p>
-  Share your story from a personal viewpoint, engaging the reader with your experiences...
-</p>
+</div>
+<div  style="background-color: lightblue;">
 
-<img src="assets/task 2.png" alt="Custom Banner" style="max-width: 100%; margin-top: 20px; border: 1px solid #ccc;" />
+Share your story from a personal viewpoint, engaging the reader with your experiences.
+Use vivid descriptions to paint a clear picture of the setting, characters, and emotions involved.
+Organize events in chronological order for a smooth and understandable narrative.
+Bring characters to life through their actions, dialogue, and personalities.
+Employ dialogue sparingly to add realism and progression to the narrative.
+Engage readers by evoking emotions through your storytelling.
+End with reflection or a lesson learned from the experience, providing insight.
+Now that you have essay examples and tips to get started, you're well on your way to crafting compelling narrative essays.
+
+
+</div>
+<div>
+    <center><a href="dashboard.html"><button > enter into dashboard</button></center>
+</div>
+
+
+</body>
+</html>
