--- a/tasks/task7.html
+++ b/tasks/task7.html
@@ -1,5 +1,15 @@
-<h2>Task 7: Console Output</h2>
+<!DOCTYPE html>
+<html>
+
+<head>
+<script src="custom_script.js">
 
 
+</script>
+</head>
 
-<img src="assets/task 7.png" alt="Custom Banner" style="max-width: 100%; margin-top: 20px; border: 1px solid #ccc;" />
+<body>
+
+   
+</body>
+</html>
