--- a/tasks/task8.html
+++ b/tasks/task8.html
@@ -1,4 +1,22 @@
-<h2>Task 8: String Operation!</h2>
+<!DOCTYPE html>
+<html>
+
+<head>
+<script src="custom_script1.js">
 
 
-<img src="assets/task 8.png" alt="Custom Banner" style="max-width: 100%; margin-top: 20px; border: 1px solid #ccc;" />
+</script>
+</head>
+
+<body>
+
+
+   
+    <input type="text" id="inputField" placeholder="Enter Text here" oninput="convertToUpper()">
+  
+    <input type="text" id="outputField" placeholder="Output will be generated here" disabled>
+
+    
+</body>
+</html>
+
