--- a/tasks/task11.html
+++ b/tasks/task11.html
@@ -1,8 +1,17 @@
-<h2>Task 11 Loops</h2>
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
 
+    
+        </style>
+    </head>
+    <body>
+        <label for="n_value">Enter the value of n:</label>
+        <input type="number" id="n_value" value="5" oninput="generatePattern()">
+        
+        <div id="demo_div"></div>
 
-
-
-<img src="assets/task 111.png" alt="Custom Banner" style="max-width: 100%; margin-top: 20px; border: 1px solid #ccc;" />
-
-<img src="assets/task 112.png" alt="Custom Banner" style="max-width: 100%; margin-top: 20px; border: 1px solid #ccc;" />
+        <script src="script2.js"></script>
+    </body>
+</html>
