--- a/tasks/task12.html
+++ b/tasks/task12.html
@@ -1,8 +1,27 @@
-<h2>Task 12</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   
+    <title>JavaScript Object Demo</title>
+   
+</head>
+<body>
+   
+    <div>
 
+        <input id="uni" placeholder="Enter uni:"/>
+        <input id="dept" placeholder="Enter dept:"/>
+        <input id="name" placeholder="Enter name:"/>
+        <input id="color" placeholder="Enter color:"/>
 
+    </div>
+    <button onclick="insert()">Insert Info</button>
+    
+    <div id="demo"></div> 
+    <button onclick="show_my_info();">Show Info</button>
+    <script src="script12.js"></script>
+</body>
+</html>
 
-
-<img src="assets/task 12.png" alt="Custom Banner" style="max-width: 100%; margin-top: 20px; border: 1px solid #ccc;" />
 
 
