--- a/tasks/dashboard.html
+++ b/tasks/dashboard.html
@@ -13,7 +13,7 @@
     <h2 style="background-color: rgb(199, 193, 161);">"                                            "</h2>
 </div>
 <div>
-    <center><a href="task2.html"><button > enter into p1</button></center>
+    <center><a href="p1.html"><button > enter into p1</button></center>
 </div>
 
 </body>
