--- a/tasks/task1.html
+++ b/tasks/task1.html
@@ -1,9 +1,20 @@
-<h2>Task 1: Expectation Document</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylecss.css">
+    <title>My page</title>
+</head>
+<body>
+     <div class = "fe">
+        <h1>welocome to my custom design page</h1>
+        <p>This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. 
+        </p>
+    
+        <button onclick="window.location.href='task1.2.html'">click here to see the dashboard</button>
 
-<p>I am truly interested in the front-end web application development course. I developed a website for my college in my bachelor's using front-end. I find it easy and interesting at cases so I want to explore more of this course to explore new ideas in projects.
-
-  I want to learn new concepts and varieties of designing a website so that it could be interactive. I also want to learn the tools in front-end which are widely useful in the current IT field.
-  
-  Of course, this course will be helpful for me in achieving my future goals since the front-web application development has the wide demand in market I could secure a job undoubtedly. This would be so helpful for me.
-  
-  I want to learn some latest tools in front-end web application development. </p>
+     </div>
+    
+</body>
+</html>
