--- a/tasks/dashboard.html
+++ b/tasks/dashboard.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title> Home Page!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dshboard.css">
+    <title>DashBoard</title>
+
 </head>
-<body style="background-color: black;">
+<body>
     
-<div >
-    <center><h1 style="background-color: rgb(134, 132, 122);">Welcome to My Custom Designed Page !<br/><span style ="font-size: 15px;"> It doesn't have any functionalities yet !</span> </h1></center>
+        <header >
+               <h1>welcome to the custom dashboard</h1>
+               <p>It Does not have any functionalities yet</p>
+        </header>
 
-</div>
-<div>
-    <h2 style="background-color: rgb(199, 193, 161);">"                                            "</h2>
-</div>
-<div>
-    <center><a href="task2.html"><button > enter into p1</button></center>
-</div>
+        <main>
 
+        </main>
+
+        <button onclick="window.location.href='task1.html'" class = "but"> Click here to return to the home page</button>
+   
 </body>
 </html>
