--- a/tasks/task2.html
+++ b/tasks/task2.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title> Home Page!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="task2.css">
+    <title>Styled Text</title>
 </head>
 <body>
-    
-<div>
-    <center><h1  style="background-color: rgb(134, 132, 122);">Welcome to My Custom Designed Page !</h1></center>
-
-</div>
-<div  style="background-color: lightblue;">
-
-Share your story from a personal viewpoint, engaging the reader with your experiences.
-Use vivid descriptions to paint a clear picture of the setting, characters, and emotions involved.
-Organize events in chronological order for a smooth and understandable narrative.
-Bring characters to life through their actions, dialogue, and personalities.
-Employ dialogue sparingly to add realism and progression to the narrative.
-Engage readers by evoking emotions through your storytelling.
-End with reflection or a lesson learned from the experience, providing insight.
-Now that you have essay examples and tips to get started, you're well on your way to crafting compelling narrative essays.
-
-
-</div>
-<div>
-    <center><a href="dashboard.html"><button > enter into dashboard</button></center>
-</div>
-
-
+    <div class="google-text">
+        <div>r</div>
+        <div>a</div>
+        <div>u</div>
+        <div>t</div>
+        <div>h</div>
+    </div>
 </body>
 </html>
