--- a/tasks/task6.html
+++ b/tasks/task6.html
@@ -1,4 +1,39 @@
-<h2>Task 6: GitHub Integration</h2>
+<!DOCTYPE html>
+<html>
+    <head>
+        <script>
+           var  x=10;
+           console.log(x) ;
+             x+=2;
+         console.log(x);
 
+   
 
-<img src="assets/task 6.png" alt="Custom Banner" style="max-width: 100%; margin-top: 20px; border: 1px solid #ccc;" />
+       
+        var y=x + 15;
+            y ** 3 ;
+            console.log(y) ;
+        y-=4;
+         console.log(y);
+         var z=x+y;
+         console.log(z);
+         z*=3;
+         console.log(z);
+         var a=x-y;
+         console.log(a);
+         a/=4;
+         console.log(a);
+         var w=x*y;
+         console.log*(w);
+         w %=3;
+         console.log(w);
+         var s=x/y;
+         s=
+         console.log(s);
+        </script>
+       
+    </head>
+    <body>
+
+    </body>
+</html>
