--- a/tasks/task4.html
+++ b/tasks/task4.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <style>
@@ -25,48 +26,51 @@
             <div class="input_div">
                 <input placeholder="Enter the value of X" id="num1"/>
                 <input placeholder="Enter the value of Y" id="num2"/>
-                <input placeholder="Result will appear here" id="res" disabled/>
+                <input placeholder="Result will appear here" id="res" />
             </div>
 
             <div class="button_div">
                 <button onclick="add()">Addition (X + Y)</button>
-                <button onclick="subtract()">Subtraction (X - Y)</button>
-                <button onclick="multiply()">Multiplication (X * Y)</button>
-                <button onclick="divide()">Division (X / Y)</button>
+                <button onclick="subt()">Subtraction (X - Y)</button>
+                <button onclick="mul()">Multiplication (X * Y)</button>
+                <button onclick="divi()">Division (X / Y)</button>
             </div>            
         </div>
+
         <script>
-            function add(){
-                let X = parseFloat(document.getElementById("num1").value);
-                let Y = parseFloat(document.getElementById("num2").value);
-                let result = X + Y;
-                document.getElementById("res").value = result;
-            }
+function add(){
+    let x=parseInt(document.getElementById("num1").value);
+    let y=parseInt(document.getElementById("num2").value);
 
-            function subtract(){
-                let X = parseFloat(document.getElementById("num1").value);
-                let Y = parseFloat(document.getElementById("num2").value);
-                let result = X - Y;
-                document.getElementById("res").value = result;
-            }
+    let res=x+y;
+    document.getElementById("res").value=res;
+}
 
-            function multiply(){
-                let X = parseFloat(document.getElementById("num1").value);
-                let Y = parseFloat(document.getElementById("num2").value);
-                let result = X * Y;
-                document.getElementById("res").value = result;
-            }
+    function subt(){
+    let x=parseInt(document.getElementById("num1").value);
+    let y=parseInt(document.getElementById("num2").value);
 
-            function divide(){
-                let X = parseFloat(document.getElementById("num1").value);
-                let Y = parseFloat(document.getElementById("num2").value);
-                if (Y !== 0) {
-                    let result = X / Y;
-                    document.getElementById("res").value = result;
-                } else {
-                    document.getElementById("res").value = "Error: Div by 0";
-                }
-            }
+    let res=x-y;
+    document.getElementById("res").value=res;
+    }
+
+    function mul(){
+    let x=parseInt(document.getElementById("num1").value);
+    let y=parseInt(document.getElementById("num2").value);
+
+    let res=x*y;
+    document.getElementById("res").value=res;
+    }
+
+    function divi(){
+    let x=parseInt(document.getElementById("num1").value);
+    let y=parseInt(document.getElementById("num2").value);
+
+    let res=x/y;
+    document.getElementById("res").value=res;
+
+}
+
         </script>
 
     </body>
