--- a/tasks/task2.html
+++ b/tasks/task2.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="google-text">
-        <div>r</div>
+        <div>c</div>
+        <div>p</div>
         <div>a</div>
+        <div>g</div>
         <div>u</div>
-        <div>t</div>
-        <div>h</div>
     </div>
 </body>
 </html>
