--- a/tasks/task5.html
+++ b/tasks/task5.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Image Display</title>
+</head>
+<body>
+
+  <h2>Here is the image:</h2>
+  <img src="assets/task6.png" alt="My Image" width="500" style="border: 2px solid #000;" />
+
+</body>
+</html>
 
