--- a/tasks/task1.html
+++ b/tasks/task1.html
@@ -8,8 +8,10 @@
 </head>
 <body>
      <div class = "fe">
-        <h1>welocome to my custom design page</h1>
-        <p>This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. This is just a dummy data. 
+        <h1>Welcome to my custom design page</h1>
+        <p>In a quiet village nestled between rolling hills, time seemed to slow down. Birds chirped softly in the distance, and the gentle rustle of leaves whispered stories of seasons past. Children played near a brook that wound through the fields, their laughter echoing like music on the breeze. Life here was simple, yet rich with moments that often go unnoticed in the rush of modern cities. The scent of fresh bread wafted from a nearby cottage, promising warmth and comfort within."
+
+
         </p>
     
         <button onclick="window.location.href='task1.2.html'">click here to see the dashboard</button>
