--- a/tasks/task5.html
+++ b/tasks/task5.html
@@ -7,7 +7,7 @@
 <body>
 
   <h2>Here is the image:</h2>
-  <img src="assets/task6.png" alt="My Image" width="1500" style="border: 2px solid #000;" />
+  <img src="assets/task6.png" alt="My Image" ;" />
 
 </body>
 </html>
