--- a/tasks/task5.html
+++ b/tasks/task5.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Image Display</title>
+  <title>Github integration</title>
 </head>
 <body>
 
-  <h2>Here is the image:</h2>
-  <img src="assets/task6.png" alt="My Image" ;" />
+  <button onclick="window.location.href='https://github.com/Chandanapagudala'">Go to Example</button>
 
 </body>
 </html>
-
