--- a/tasks/task5.html
+++ b/tasks/task5.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <button onclick="window.location.href='https://github.com/Chandanapagudala'">Go to Example</button>
+  <button onclick="window.location.href='https://github.com/Chandanapagudala'">Github Integration</button>
 
 </body>
 </html>
